fixes for contact name and contact number normalization